--- a/samples/remote_attestation/compose.yml
+++ b/samples/remote_attestation/compose.yml
@@ -53,6 +53,7 @@ services:
       ego-ra-server:
         condition: service_started
     entrypoint: ["ego-ra-client", "-a", "ego-ra-server:8081"]
+    command: ["-s", "ego signerid public.pem"]
 
 volumes:
   aesmd-socket:
